fix(stylesheets): Fixed ProjectItem component tech icons wrap mode

--- a/components/project-box/project-item/project-item.scss
+++ b/components/project-box/project-item/project-item.scss
@@ -43,6 +43,7 @@
 		.tech-icons {
 			& {
 				display: flex;
+				flex-wrap: wrap;
 				gap: 0.25rem;
 			}
 
